# backup-shield

./: .gitignore  BUILD_WINDOWS.md  Cargo.toml  README.md  ROADMAP_PRODUZIONE.md  fixes_windows.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/compression/: Cargo.toml
crates/compression/src/: compressor.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: apfs.rs  chunker.rs  config.rs  fs_utils.rs  index.rs  lib.rs  pack.rs  repository.rs  snapshot.rs  system.rs  vss.rs  watcher.rs  windows_attrs.rs
crates/core/tests/: prune_tests.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: encryption.rs  keygen.rs  lib.rs
crates/ecc/: Cargo.toml
crates/ecc/src/: lib.rs  reed_solomon.rs  repair.rs
crates/restore/: Cargo.toml
crates/restore/src/: lib.rs  restore.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  lib.rs  local.rs  s3.rs  sftp.rs  webdav.rs
crates/verify/: Cargo.toml
crates/verify/src/: checker.rs  lib.rs  scrub.rs
crates/verify/tests/: repair_tests.rs
scripts/: README-GUI.md  README.md  backup-shield-gui.py  backup-shield-web.py  backup-shield.bat  backup-shield.sh  com.backup-shield.daily.plist  com.backup-shield.daily.xml  com.backup-shield.hourly.xml  com.backup-shield.weekly.xml  init-repo.bat  init-repo.sh  install-schedule.ps1  recovery-macos.sh  release.sh
tests/: cli_tests.rs  end_to_end.rs  path_tests.rs
