[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/ecc",
    "crates/compression",
    "crates/storage",
    "crates/verify",
    "crates/restore",
    "crates/cli",
]

[package]
name = "backup-shield-tests"
version.workspace = true
edition.workspace = true
publish = false
description = "Workspace-level integration tests for BackupShield"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "Copyright (c) 2026 André Willy Rizzo. All rights reserved."
authors = ["André Willy Rizzo"]
description = "Cross-platform incremental backup with data integrity and auto-repair"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Hashing
sha2 = "0.10"
blake2 = "0.10"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Compression
zstd = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Glob pattern matching
glob = "0.3"

# Walkdir for directory traversal (used by CLI for progress)
walkdir = "2"

# Hex encoding
hex = "0.4"

# Directory paths
dirs = "5"

# Internal crates
backup-shield-core = { path = "crates/core" }
backup-shield-crypto = { path = "crates/crypto" }
backup-shield-ecc = { path = "crates/ecc" }
backup-shield-compression = { path = "crates/compression" }
backup-shield-storage = { path = "crates/storage" }
backup-shield-verify = { path = "crates/verify" }
backup-shield-restore = { path = "crates/restore" }

# Test utilities
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[dev-dependencies]
backup-shield-core.workspace = true
backup-shield-verify.workspace = true
backup-shield-restore.workspace = true
tempfile.workspace = true
anyhow.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
sha2.workspace = true
walkdir.workspace = true
chrono.workspace = true
hex.workspace = true
