[package]
name = "backup-shield-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
blake2 = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

# File system notifications (FSEvents on macOS, inotify on Linux, ReadDirectoryChanges on Windows)
notify = { version = "7", features = ["macos_fsevent"] }

# File locking (cross-platform flock)
fs2 = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Storage_Vss",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[dev-dependencies]
tempfile = "3"
