[package]
name = "backup-shield-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
