[package]
name = "backup-shield-ecc"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
