[package]
name = "backup-shield-storage"
version.workspace = true
edition.workspace = true

[dependencies]
backup-shield-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

# File system info (available_space)
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
